--- a/Mini_Undertale/export_presets.cfg
+++ b/Mini_Undertale/export_presets.cfg
@@ -35,7 +35,7 @@ codesign/custom_options=PoolStringArray(  )
 application/icon="res://Sprites/Corazon.png"
 application/file_version=""
 application/product_version=""
-application/company_name=""
+application/company_name="DELU"
 application/product_name="Mini Undertale"
 application/file_description=""
 application/copyright=""
